--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="title_search">搜索</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="getDiscount">领券</string>
+    <string name="loading">加载中...</string>
+    <string name="empty">内容被外星人偷走了。。。</string>
+    <string name="net_error">网络错误，点击重试...</string>
 </resources>
