--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="loading">加载中...</string>
     <string name="empty">内容被外星人偷走了。。。</string>
     <string name="net_error">网络错误，点击重试...</string>
+    <string name="goods_save_tx">省%1$d元</string>
 </resources>
